[package]
name = "tpt_change_stream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"]]}
mongodb = "2.8.2"
serde_json = {version = "1.0.117", features = ["default"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_with = {version = "3.8.1"}
dotenvy = "0.15.7"
futures = {version = "0.3.30"}
rabbitmq-stream-client = "0.4.2"
sqlx-oldapi = {version = "0.6.22", features = ["sqlx-macros", "mssql", "runtime-tokio-rustls", "decimal", "json", "chrono"]}
chrono = {version = "0.4.38", features = ["serde"]}
anyhow = "1.0.86"
derive_more = "0.99.18"
log = "0.4.21"
log4rs = "1.3.0"


[[bin]]
name = "cs_service"
path = "src/bin/main.rs"

[lib]
name = "cs_lib"
path = "src/lib/mod.rs"

